Fix forms wrapping weird.

--- a/css/common.css
+++ b/css/common.css
@@ -818,3 +818,8 @@ input[type="checkbox"]
 {
 	vertical-align:middle;
 }
+
+label
+{
+	display:inline-block;
+}
